force-app/main/default/objects/VDT_General_Setting__mdt.object
<CustomObject>
    <label>VDT General Setting</label>
    <pluralLabel>VDT General Settings</pluralLabel>
    <fields>
        <fullName>Apex_Async_Execution_Daily_Allocation__c</fullName>
        <label>Apex Async Execution Daily Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Country_Code_Field__c</fullName>
        <label>Default Country Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Calculation_Requests__c</fullName>
        <label>Maximum Calculation Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Running_Calculations__c</fullName>
        <label>Maximum Running Calculations</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Field_Identifier__c</fullName>
        <label>Standard Field Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Year_Decrement__c</fullName>
        <label>Start Date Year Decrement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Running_Calculations_Upper_Bound</fullName>
        <active>true</active>
        <description>Upper bound for running calculations set according to governor limits.</description>
        <errorConditionFormula>Maximum_Running_Calculations__c &gt; 5</errorConditionFormula>
        <errorDisplayField>Maximum_Running_Calculations__c</errorDisplayField>
        <errorMessage>According to Salesforce Governor Limits, Maximum Running Calculations must be less than or equal 5</errorMessage>
    </validationRules>
</CustomObject>