force-app/main/default/objects/VDT_General_Setting__mdt/fields/Account_Classification_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification_Field__c</fullName>
    <label>Account Classification Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>