force-app/main/default/objects/VDT_General_Setting__mdt/fields/Active_Tab_List__c.field-meta.xml
<CustomField>
    <fullName>Active_Tab_List__c</fullName>
    <label>Active Tab List</label>
    <length>150</length>
    <type>Text</type>
</CustomField>