force-app/main/default/objects/VDT_General_Setting__mdt/fields/Cycle_Plan_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Plan_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to indicate whether cycle plan should be calculated or not</description>
    <inlineHelpText>Flag to indicate whether cycle plan should be calculated or not</inlineHelpText>
    <label>Cycle Plan Enabled</label>
    <type>Checkbox</type>
</CustomField>