force-app/main/default/objects/VDT_General_Setting__mdt/fields/Default_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Field__c</fullName>
    <label>Default Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>