force-app/main/default/objects/VDT_General_Setting__mdt/fields/International_Country__c.field-meta.xml
<CustomField>
    <fullName>International_Country__c</fullName>
    <label>International Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>