force-app/main/default/objects/VDT_General_Setting__mdt/fields/Product_Catalog_Object__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog_Object__c</fullName>
    <label>Product Catalog Object</label>
    <length>150</length>
    <type>Text</type>
</CustomField>