force-app/main/default/objects/VDT_General_Setting__mdt/fields/Vault_Join_Field__c.field-meta.xml
<CustomField>
    <fullName>Vault_Join_Field__c</fullName>
    <label>Vault Join Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>