force-app/main/default/objects/VDT_General_Setting__mdt/fields/VDT_Default_Countries__c.field-meta.xml
<CustomField>
    <fullName>VDT_Default_Countries__c</fullName>
    <label>Default Countries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>