force-app/main/default/objects/VDT_General_Setting__mdt/fields/VDT_Default_Specialty_Field__c.field-meta.xml
<CustomField>
    <fullName>VDT_Default_Specialty_Field__c</fullName>
    <label>Default Specialty Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>