force-app/main/default/objects/VDT_General_Setting__mdt/fields/VDT_Is_Territory_Management_Active__c.field-meta.xml
<CustomField>
    <fullName>VDT_Is_Territory_Management_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VDT Is Territory Management Active</label>
    <type>Checkbox</type>
</CustomField>